# izza-ai

./: .env.example  .gitignore  Dockerfile  GEMINI.md  Jenkinsfile  README.md  database_tools.py  main.py  mcp_tools.py  model_config.py  orchestrator_agent.py  public_api_integration.py  requirements.txt  run.sh  sub_agents.py  weight_logic.pdf:Zone.Identifier  베드락 agent를 모델로 쓰기.md
docker/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  build.sh  docker-compose.override.yml  docker-compose.yml
docs/: BLOG_README.md  weight_logic.doc  weight_logic.doc:Zone.Identifier
final/: .gitignore  API_README.md  CHANGES_SUMMARY.md  browser_test.html  fastapi_server.py  main_orchestrator.py  requirements.txt  run_server.py  test_curl.sh  test_json_api.py
final/past_codes/: jinjaorchest.py  knowledge_agent_tool_no.py  mainorchest.py  orchest.py
final/prompts/: policy_agent_prompt.txt
final/templates/: error.html  index.html  loading.html
k8s_deployment/: ai-report.yaml  app.yml
reportGen/docWrite/: .gitignore  README.md  bizinfo_report.html  land_analysis.py  land_report.html  policy_analysis.py  policy_analysis_jinja2.py  pyproject.toml
reportGen/docWrite/oldpy/: policy_analysis.py
reportGenServer/: config.py  jinjaorchest.py  jinjaorchest2.py  knowledge_agent_tool.py  mainorchest.py  orchest.py  policy_agent.py  template.html  template_or.html
src/: .env  __init__.py  browser_test.html  config.py  fastapi_server.py  knowledge_agent_tool.py  logging_config.py  main_orchestrator.py  policy_agent.py  requirements.txt  run_server.py
tests/: workshop_test.py
(+17 files in other folders)
